--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mypfa",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -18,9 +19,12 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-document-picker": "^8.2.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.5.2",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
